<resources>
    <string name="app_name">Shoe Corner</string>
    <string name="loginEmailAdressHint">Email address</string>
    <string name="loginPasswordHint">Password</string>
    <string name="createButton">Create</string>
    <string name="loginButton">Login</string>
    <string name="WelcomeText1">Welcome to Shoe Store, your sole mate </string>
    <string name="WelcomeText2">The store that will fit all the needs of your sole and you will never even feel that you are wearing a shoe.</string>
    <string name="InstructionsButton">Instructions</string>
    <string name="InstructionsText1">Upon pressing the “LIST OF SHOES” below, you will be shown a list of all the shoes that are available in the store</string>
    <string name="InstructionsText2">In the page where the list of shoes are shown, you will see “+” button.  On pressing the “+” button, a Shoe Detail page will be shown, which will allow to add a shoe to the list of shoes.</string>
    <string name="ShoeListingButton">List of Shoes</string>
    <string name="LogoutButton">Logout</string>
    <string name="CancelButton">Cancel</string>
    <string name="SaveButton">Save</string>
    <string name="ShoeDataFile">ShoeData.txt</string>
    <string name="AddShoe">Add Shoe</string>
    <string name="ShoeName">Shoe Name</string>
    <string name="CompanyName">Company Name</string>
    <string name="ShoeSize">Shoe Size</string>
    <string name="ShoeDescription">Shoe Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>